src/test/deca/context/invalid/created/binary_exp/op_arith/minus_boolean_int.deca
// Description :
//    test minus entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type boolean, L’opérande droite est de type int. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
boolean a;
int b;
int c = a - b;
}
